--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -57,6 +57,18 @@ body {
     cursor: pointer;
     margin-bottom: 1em;
 }
+.order-cart-btn {
+    background-color: #5F6737;
+    color: white;
+    padding: 0.5em 1em;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-bottom: 1em;
+}
+.order-cart-btn:hover {
+    background-color: #5F6737;
+}
 .clear-cart-btn:hover {
     background-color: #cc0000;
 }
@@ -495,13 +507,13 @@ main.auth-page {
 }
 
 .auth-form input:focus {
-    border-color: #007bff;
+    border-color: #5f6737;
     outline: none;
 }
 
 .auth-form button {
     padding: 12px;
-    background-color: #007bff;
+    background-color: #5f6737;
     color: white;
     border: none;
     border-radius: 10px;
